--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       PGDATA: /var/lib/postgresql/data
     volumes:
       - db-data:/var/lib/postgresql/data
+      - ./scripts/:/docker-entrypoint-initdb.d/
     expose:
       - "5432"
     ports:
